Archive2/db/486415c539202f/main.cpp
#include <fstream>
#include <iostream>

void f(std::istream&);

int main()
{
    f(
        false
        ? std::ifstream("/tmp")
        : std::cin
    );
}